--- a/index.css
+++ b/index.css
@@ -63,3 +63,19 @@ body {
     background-color: forestgreen;
     border: 0cap;
 }
+
+@media only screen and (max-width: 768px) {
+    body {
+        padding: 50px;
+    }
+
+    #logo {
+        width: 250px;
+    }
+
+    #playButton {
+        padding: 8px 16px;
+        font-size: 16px;
+        bottom: -10px;
+    }
+}
